・LocalDB接続サンプル ・整理など

--- a/Programming/デザインパターン.md
+++ b/Programming/デザインパターン.md
@@ -1,9 +1,9 @@
 
 # デザインパターン
 
-後でまた、まとめなおすかもしれんけど、とりあえずね。。
+---
 
-## シングルトン
+## Singletonパターン
 
 [デザインパターン「Singleton」](https://qiita.com/shoheiyokoyama/items/c16fd547a77773c0ccc1)  
 
@@ -91,3 +91,7 @@ Singletonパターンが適したクラス例
 データベース接続ドライバ
 ソケット制御ドライバ
 上記のクラス（機能）を踏まえると、リソース管理にSingletonパターンが適していると考えられます。リソースに対して複数のインスタンスが管理を行えば、状態管理で不整合が生じる可能性があります。この不整合を防止するために、Singletonを用いるのは自然な事だと思います。
+
+---
+
+## Facadeパターン
