--- a/Programming/プログラミングに関するメモ.md
+++ b/Programming/プログラミングに関するメモ.md
@@ -227,3 +227,135 @@ interfaceはcan doの関係
 WPFを選択した場合、.NET Framework 4.7/4.8にするか、.NET Core 3にするのかも選ばなければいけません。  
 将来的なサポートやテストしやすさを考えれば、.NET Core 3から.NET 5へと続く道へ。  
 リリースが間近か、現在ある資産をどうしても手放せないのであれば、.NET Framework 4.7/4.8でしょうか。  
+
+---
+
+## バイナリ
+
+こんなに勉強してきて「バイナリとは何か？」をまとめていなかったのは意外である。  
+というわけでまとめ。  
+
+``` txt : ZDNet
+バイナリとは、コンピュータ用語としては、データが「0」と「1」で表現されているデータ形式のこと。
+あるいは、テキストではない情報でデータが書かれているファイル一般のことである。
+バイナリ（binary）とは、元々「2進数の」という意味の英語である。
+
+コンピュータはデータを処理するために、全ての情報を2進数に変換しているので、コンピュータが解釈するために用意されたデータはすべてバイナリ形式となっている。
+一般的には、データがバイナリで記述されているファイルはバイナリファイル、バイナリファイルのデータはバイナリデータと呼ばれている。
+バイナリファイルの主なものには、音声ファイルや画像ファイル、実行形式のプログラムファイル、圧縮ファイルなどがある。
+バイナリデータは、人間が読んでも、意味を解釈することはきわめて困難である。
+テキストはテキストエディタで表示・編集することができるが、バイナリデータはテキストエディタでは開くことができない。
+このため、テキストでないデータ形式のデータをバイナリデータと総称している場合も多い。
+
+ ちなみに、データ構造の一種である2分木は、2つに分岐するという意味でバイナリツリーと呼ばれている。
+```
+
+大抵の説明では0か1ばかりのファイルとあるが、それを表示するバイナリエディターでは16進数で表示されている。  
+まぁ、01を永遠と見させられるよりは、16進数で2つにまとめて見せたほうが、効率がいいよね。  
+wikiみたら、バイナリエディタでは16進数で表示するのが一般的みたいなので、あながち間違いではなさそうだ。  
+
+---
+
+## リテラル(literally)
+
+リテラル(英: literal)は、「文字どおり」「字義どおり」を意味する語で、letter と同じくラテン語の littera（文字）に由来する。  
+数理論理学とコンピュータプログラミングで異なる意味の専門用語として使われる。  
+
+ソースコード内の値となる、文字列、数字、式を直接表記したもの。  
+変数を箱を例えるなら、その変数の中に入る値をリテラルという。  
+
+下記のような処理があったら、代入された値の"Hello World"や"10"のことをリテラルという。
+
+``` C#
+var string = "Hello World";
+var num = 10;
+```
+
+---
+
+## 関数リテラル
+
+[関数リテラルという言葉を理解する](https://amimimi.hatenablog.com/entry/2013/11/16/174019)  
+
+変数に関数を代入して記述することを関数リテラルという。  
+関数リテラル、無名関数、匿名関数、3つはほぼ同義。  
+
+``` js
+var test = function() {}
+```
+
+---
+
+## 関数シグネチャ
+
+[F5 GLOSSARY_シグネチャ](https://www.f5.com/ja_jp/services/resources/glossary/signature#:~:text=%E3%82%B7%E3%82%B0%E3%83%8D%E3%83%81%E3%83%A3%E3%81%A8%E3%81%AF%E3%80%81%E4%B8%80%E8%88%AC%E3%81%AB%E3%81%AF,%E3%81%AF%E8%A8%80%E8%AA%9E%E3%81%AB%E3%82%88%E3%81%A3%E3%81%A6%E7%95%B0%E3%81%AA%E3%82%8A%E3%81%BE%E3%81%99%EF%BC%89%E3%80%82)  
+>シグネチャとは、一般には「署名」を意味します。  
+>またプログラミングの世界では、メソッド名、パラメータの型、数、順序、戻り値の型等で構成された、メソッドを識別するための情報という意味があります（具体的な定義は言語によって異なります）
+
+[MDN Web Docs 用語集: ウェブ関連用語の定義Signature (シグネチャ)](https://developer.mozilla.org/ja/docs/Glossary/Signature)  
+>関数シグネチャ (もしくは型シグネチャ、メソッドシグネチャ) はFunctionやMethodの入力と出力を定義します。  
+
+[e-Words](https://e-words.jp/w/%E3%82%B7%E3%82%B0%E3%83%8D%E3%83%81%E3%83%A3.html)  
+>プログラミングの分野では、関数やメソッドの名前、引数の数やデータ型、返り値の型などの組み合わせのことをシグネチャという。  
+言語によっては、同じクラスなどの中で名前が同じだが引数の型などが異なるメソッドを複数同時に宣言することができる場合があり、それらはシグネチャによって識別される。  
+>
+>例えば、2つの引数の算術和を求めるメソッドを作りたいとき、通常は引数や返り値の型ごとに、整数用の int add_int（int x,int y）、浮動小数点用の float add_float（float x,float y）…といった具合に同じ機能のメソッドをそれぞれ用意して使い分けなければならない。  
+シグネチャによる識別が可能な言語では、すべて同じ add（x,y） メソッドとして宣言すれば、呼び出し時に引数の型に応じて処理系が適切なものを選択してくれる。  
+
+(もしくは型シグネチャ、メソッドシグネチャ) は関数やメソッドの入力と出力を定義します。  
+シグネチャは以下のものを含みます:  
+
+・パラメーター とその 型  
+・返り値とその型  
+・スローされる可能性のある例外  
+・オブジェクト指向 プログラムにおける利用可能性の情報(public、static、prototype のようなキーワード)。  
+
+---
+
+## POCO(Plain Old CLR Object)
+
+メソッドを持たず、プロパティだけ持つ、データを格納するだけが目的のクラス。  
+共通言語ランタイム（Common Language Runtime、CLR）のみに依存するプレーンなオブジェクト。  
+
+これに限らずASP.NetCoreを説明しているあれを全てまとめたい勢いだ。  
+
+---
+
+## 命名規則
+
+[命名規則(キャメルケース, パスカルケース, スネークケース, ケバブケース)](https://www.wakuwakubank.com/posts/804-it-naming-convention/)  
+
+### キャメルケース( camelCase ) or ローワーキャメルケース
+
+`currentUserItem`  
+
+- 先頭の要素語( current )は小文字で書き始めます。  
+- 先頭以外の要素語( user item )の最初を大文字で書き始めます。  
+- ローワーキャメルケースともいいます。  
+
+- PHPやjsなどの関数で使われることが多い  
+
+### パスカルケース( PascalCase ) or アッパーキャメルケース
+
+`CurrentUserItem`  
+
+- 要素語( current user item )の最初を大文字で書き始めます。  
+- アッパーキャメルケースともいいます。
+
+### スネークケース( snake_case )
+
+`current_user_item`  
+
+- アンダースコア で要素語( current user item )を連結します。  
+
+- 定数はすべて大文字。例:BLOG_CATEGORY  
+- DBなどで扱われる値に使用されることが多い  
+
+### ケバブケース( kebab-case )
+
+`company-id`,`blog-catefgory`  
+
+- ハイフン で要素語( current user item )を連結します。
+
+- HTMLのclass名  
+- ファイル名等  
