整理とか疑問追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -295,6 +295,14 @@ UIスレッドと表記されることもある。
 ## WebAssembly
 
 [WebAssemblyとは？〜実際にC言語をブラウザで動かす〜【2019年6月版】](https://qiita.com/umamichi/items/c62d18b7ed81fdba63c2)  
+[日経_XTECH_3分でわかる WebAssembly](https://active.nikkeibp.co.jp/atcl/act/19/00146/032000001/)  
+
+WebAssemblyはWebブラウザーが実行できるバイナリー形式のアセンブリー言語。  
+CやC++といった各種プログラミング言語で開発したプログラムをコンパイルして、ブラウザー上で実行できる。  
+実行時にパースやバイナリーコードへの変換処理が不要なため、JavaScriptコードよりも高速に動作する。  
+
+WebAssemblyを使えば、多様なアプリをWebアプリとして動かせる。  
+主要なWebブラウザーであるChromeやFirefox、EdgeなどはWebAssemblyに対応済みなので、今後の普及が見込まれる。  
 
 ---
 
@@ -338,3 +346,60 @@ ItemsPanel
 
 https://www.mpuni.co.jp/products/ballpoint_pens/refill_jet.html
 https://www.koekisha.co.jp/chiebukuro/difference02/
+
+git 特定のブランチからブランチ  
+[【Git】git checkout -b [ローカルブランチ名] origin/[リモートブランチ名]：リモートブランチをローカルに持ってきてチェックアウト](https://qiita.com/megu_ma/items/26799c89f593a2414333)  
+VisualStudioでの作業なら、[ブランチの管理]、分岐させたいコミットを右クリック、[新しいブランチ]項目があるので、それを選ぶだけで実現できる。  
+ブランチが勝手に切り替わることもなかった。  
+
+コマンドでやる場合、checkoutコマンドでしか無理な模様。  
+それによってブランチが自動的に切り替わるのかはやっていないので不明。  
+
+[【Git】ローカルからリモートリポジトリに push できない問題を解決するまでの記録！](https://oki2a24.com/2016/01/28/resolve-error-to-push-from-local-to-remote-in-git/)  
+いつぞやこれが発生してこのページ見なかったっけか。  
+
+[【Git】cherry pick を理解する。そして各コミットを別々のブランチに振り分ける実践例](https://oki2a24.com/2016/12/25/cherry-pick-commits-to-another-branches-in-git/)  
+チェリーピックってなんすかね。
+Issueってなんすかね。
+
+[SQL ServerのGOコマンドとは？](https://sql-oracle.com/sqlserver/?p=708)  
+[SQL Server のユーティリティのステートメント - GO](https://docs.microsoft.com/ja-jp/sql/t-sql/language-elements/sql-server-utilities-statements-go?view=sql-server-ver16)  
+
+[イベントログの確認と保存](https://news.mynavi.jp/techplus/article/techp923/)  
+
+〆・実務の接続サンプル抽出
+〆・sql connectionのdisposeによる自動closeのurlをecoから探す
+・C#でJsonファイルの読み書き
+・C#でのJsonの表現方法
+・ASP.Net Core API + Vue axios 通信サンプル
+
+戻したい位置を右クリック、元に戻す。
+mixedは変更を保持するので、変更一覧にこういう変更しましたよねってのが表示される。
+hardは変更も削除するので、右側に何も表示されず、最新だけが指定した位置まで戻る。
+
+
+
+ティッシュ忘れた。
+目薬忘れてたけど入ってたからよかった。
+
+頭が別のこと考えてる感じがする。
+色々眼中になくてボーっとしてる。
+
+バッグはもうあれでいいのではと思う。
+7000円も出す必要性を感じない。
+・ユニクロ、ポロシャツ
+・ボールペン、もう一つ注文するだろう。0.5mmでもよさそうか日曜日に判定する。
+
+
+
+俺って自分のことしか考えてないよな。
+転職に影響しそうな内容だな。
+そうだとしても、転職以外、俺が生き残る道はないからやるしかないんだけどね。
+でも、結局は人間、自分の事しか考えられないものでは？
+あまりにも利己的って訳でもないしなぁ。
+
+
+昨日書くの忘れたが、エナドリの味が微妙に感じてきた。
+あれを飲むくらいならチオビタ一本でいい気がしてきた。
+
+
