〆・sql connectionのdisposeによる自動closeのurlをecoから探す 〆・ソートアルゴリズムまとめ 〆・LinqのOrderByをいい加減まとめる 〆・シングルトンまとめ 〆・Taskまとめ 〆・C#でJsonファイルの読み書き 〆・C#でのJsonの表現方法

--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -380,9 +380,45 @@ Task.Factory.StartNewが不要になったわけではない。
 
 ## AsyncをAwaitするのと同期は同じか？
 
+居林さんからAsyncをAwaitするのと、普通の同期処理は同じか？という質問を受けた。  
 居林さんは毎回いい質問を持ってきてくれる。  
-厳密には違うだろう。  
+厳密には違うだろうが、どう違うのか、考えてみればわからないのでまとめることにした。  
+
+同期処理における時間のかかる処理は白くなって動かせなくなる。  
+しかし、AsyncAwaitは普通に動かせる。  
+おそらくだが、実行するスレッドが違うからこのような違いになると思われる。  
+同期処理における待機は、UIスレッドそのものを止めるので、画面が固まってしまうが、AsyncAwaitはUIスレッド以外で新しくスレッド作ってそちらで実行するので、画面は固まらない。  
+でも、処理を実行しているスレッドでは、実質同期的な停止と同じなのだろう。  
+
+``` C#
+    // 画面固まる。2秒経過したら画面動かせるようになって、メッセージボックスが表示される。
+    private void Button_Click(object sender, RoutedEventArgs e)
+    {
+        Task.Delay(2000).GetAwaiter().GetResult();
+        MessageBox.Show("owata1");
+    }
+
+    // 画面固まらない。2秒中も操作可能で2秒経過したらメッセージボックスが表示される。
+    private async void Button_Click_1(object sender, RoutedEventArgs e)
+    {
+        await Task.Delay(2000);
+        MessageBox.Show("owata2");
+    }
+```
 
 async await 同期 同じ　c#  
 [[C#]await利用時の同期コンテキストと実行スレッドの動きについてコードを動かして見ていく](https://qiita.com/Kosei-Yoshida/items/7afe6c2f6158f36f50b1)  
 [【C#】ASYNC/AWAITで同期メソッドから非同期メソッドを呼ぶ方法](https://nryblog.work/call-sync-to-async-method/)  
+
+何回もボタンを押した後で、〇〇のスレッドが終了しましたってのはそういう意味なのかもしれない？
+そのスレッドの処理が終わったことを通知するアナウンスなんだろうな。
+
+---
+
+## 非同期プログラミングのベストプラクティス
+
+[非同期プログラミングのベストプラクティス](https://docs.microsoft.com/ja-jp/archive/msdn-magazine/2013/march/async-await-best-practices-in-asynchronous-programming)  
+
+- async void を避ける  
+- すべて非同期にする  
+- コンテキストを構成する  
