--- a/Programming/オブジェクト指向.md
+++ b/Programming/オブジェクト指向.md
@@ -41,3 +41,24 @@
 ・まとめた物を他のまとめた物(オブジェクト)と組み合わせてプログラムしていく  
 
 ---
+
+## Abstract,Interface
+
+まぁ何かサンプルを作るのが手っ取り早いな。
+
+Javaの本は長々と説明があるので読むのがだるい。
+それにサンプルとしてまとめるにはいささか冗長すぎる。
+
+abstractとinterface使い分けのベストプラクティスさえわかれば個人的にはいい。
+
+``` txt
+abstract           | interface
+
+処理を記述できる。   定義だけ。
+```
+
+https://suin.io/522
+https://teratail.com/questions/70213
+https://qiita.com/yutorisan/items/d28386f168f2f3ab166d
+
+interfaceはcan doの関係  
