--- a/Programming/プログラミングに関するメモ.md
+++ b/Programming/プログラミングに関するメモ.md
@@ -55,15 +55,37 @@ staticはインスタンスを生成しないのは①でやった通り。
 2. コンパイラがコンパイル中に型を検証し、変数に間違った型を割り当てようとするとエラーをスローすること  
 
 ``` C#
-Cookie m1 = new Cookie("cookie1", "Value1");
-string i1 = new String('A', 10);
+Cookie obj = new Cookie("cookie1", "Value1");
+string str = new String('A', 10);
 
+// タイプセーフの場合
 // ==演算子の長所：タイプセーフなので型が違うとコンパイルエラー
-WriteLine($"m1 == i1 {m1 == i1}");
+WriteLine($"obj == str {obj == str}");
+
+// タイプセーフではない場合
 // Equalsメソッドは型が違っても比較できてしまう
-// 出力：m1[Cookie].Equals(i1[String]) False
-WriteLine($"m1[Cookie].Equals(i1[String]) {m1.Equals(i1)}");
+// 出力：obj[Cookie].Equals(str[String]) False
+WriteLine($"obj[Cookie].Equals(str[String]) {obj.Equals(str)}");
 ```
+
+---
+
+## nullセーフ
+
+[null安全](https://relearn-java.com/null-safe/)  
+
+``` TXT
+null安全とは 実行時にnullが原因のエラー（NullPointerException）を発生させないような仕組みです。  
+SwiftやKotlinなど比較的新しい言語では積極的に取り入れられています。  
+```
+
+チェックアウトのことで福田さんと話している時に、なぜわざわざnewだけして返却しているのか聞いた時の話。  
+曰く「nullsafeのため」ということだったので、まとめることにした。  
+
+nullで返却してもいいけども、返却した先でnullチェックしてなかったらエラーになってしまうだろうから、それならオブジェクトを代入して返してやったほうがいいよね。  
+あなたちゃんとnullチェックしてるって自信を持って言える？  
+そうでなくてもnullが来てもバグが発生しない安全なプログラミングをしておいて損はないでしょ。  
+って感じだった。  
 
 ---
 
@@ -87,100 +109,6 @@ Wikiの説明がいちいち面白い。
 
 ---
 
-## 異常終了系の用語まとめ
-
-- ハングアップ : フリーズとほぼ同義。ソフトウェアからの反応が停止した状態。  
-- フリーズ : ハングアップとほぼ同義。ソフトウェアからの反応が停止した状態、もしくは処理が多すぎて停止しているように見える。  
-- クラッシュ : ソフトウェアが停止して終了します。通常、イベントログに履歴が残ります。
-- アベンド : 大型コンピューターにおけるプログラム的な異常終了。  
-
-大体がフリーズかクラッシュで通じると思われる。  
-個人的にハングアップはあまり聞いたことがない。  
-アベンドに関してはメインフレームの時代の話なので、ほとんど使われない気がする。  
-
-### アベンド(abend)
-
-``` txt : アベンドで調べたら一番上に出てくる説明
-アプリケーションなどで実行中の処理が、プログラムのバグ等の理由によって、通常の手順で終了出来なくなった状態のこと。
-IBMのメインフレーム「system/360」で用いられたエラーメッセージの一種。
-アベンドは異常終了と呼ばれる場合もある。
-```
-
-``` txt : e-Words
-アベンドとは、「異常終了」（abnormal end）を意味する略語。
-実行中のコンピュータプログラムが何らかのトラブルに遭遇し唐突に終了することを表す。
- 
-プログラム上に設定された本来の終端箇所とは異なる位置で突然終了することを指す。
-プログラムの誤り（バグ）や想定外のデータの入力、ハードウェアの障害などによって続行不能に陥ったり、
-何らかの異常な振る舞いによりOSなどにより強制的に終了させられたりすることにより発生する。
-異常の種類や内容を知らせる識別番号が出力される場合もあり、これを「アベンドコード」（ABEND code）という。
-
-1960年代にIBM社の大型コンピュータ（メインフレーム）上で動作するソフトウェアについて用いられた用語が広まったもので、
-主にメインフレーム系システムに関連する分野や文脈で用いられるが、現代では他の分野でも異常終了を意味する一般的な用語として使う人がいる。
-```
-
-### ハングアップ(hang up)
-
-「電話を切る」という意味もある模様。  
-
-``` txt : 調べたら一番上に出てくる説明
-利用中のアプリケーションやPCが停止し、(あるいは正常に動作しなくなり)、入力装置からの入力が出来なくなった状態の事。
-操作を全く受け付けなくなった状態。
-システムの再起動以外に復帰の方法はない。
-```
-
-``` txt :  e-Words
-ハングアップとは、動作中のコンピュータやソフトウェアが機能を停止し、操作を受け付けなくなったり外部からの通信に応答しなくなること。
-
-一般的には、表示状態などがある時点で固まったままコンピュータそのものが（OSレベルで）一切の操作を受け付けなくなり、
-復帰するにはスイッチなどを操作して電源を落としたり、リセットして再起動するしかない状況を指すことが多い。
-特定のアプリケーションソフトが停止することなどを指す場合もある。
-
-「フリーズ」（freeze/凍る）、「ストール」（stall/固まる）などはほぼ同義語であり明確な意味上の違いはないが、
-これらは完全な停止状態に加えて、一時的な停止状態や処理に長い時間がかかっている状態を指すこともある。
-
-「クラッシュ」（crash）「異常終了」なども動作を停止するという意味では同じだが、これらはソフトウェアが突如終了してOSの操作画面に戻ることや、
-コンピュータの電源が突然切れたり再起動するなど、異常によって強制的に終了することを表し、
-「使っていた状態のまま操作を受け付けなくなる」ハングアップとは区別されることが多い。
-```
-
-### フリーズ(Fleeze)
-
-``` txt : e-Words
-コンピューターやソフトウェアの動作が停止して、操作を受け付けなくなる現象や状態。
-時間経過や特定の操作で解除されるような一時体な停止状態と、まったく制御不能な完全な停止状態がある。
-
-「ハングアップ」（hang-up）もほぼ同義語であり明確な意味上の違いは見られないが、こちらは一時的な停止を指すことは稀で、
-機器やOSのレベルで回復不能な停止状態に陥り、再起動が必要な状態を指すことが多い。
-
-「クラッシュ」（crash）「異常終了」なども動作を停止するという意味では同じだが、これらはソフトウェアが突如終了してOSの操作画面に戻ることや、
-コンピュータの電源が突然切れたり再起動するなど、異常によって強制的に終了することを表し、
-「使っていた状態のまま操作を受け付けなくなる」フリーズとは区別されることが多い。
-```
-
-### クラッシュ(Crash)
-
-``` txt : e-Words
-クラッシュとは、衝突（する）、激突（する）、潰れる、砕ける、といった意味の英単語で、
-ITの分野では、俗にストレージ（外部記憶装置）が物理的に破損して記憶内容が損なわれることや、実行中のソフトウェアが突如として異常終了することなどを指す。
-
-ハードウェアのクラッシュ
-主にハードディスクなどの記憶装置について、記録面の摩耗や激しい衝撃による損傷などにより正常に読み書きが行えなくなることをクラッシュという。
-損傷箇所に記録されていたデータは失われ、上書きや初期化もできなくなる。
-電源回路や制御用チップなどが破損した場合には装置全体に渡ってまったくアクセスできなくなる場合もある。
-
-ソフトウェアのクラッシュ
-ソフトウェアについてクラッシュという場合には、コンピュータ上で実行されていたプログラムが何らかの理由により異常終了することを指す。
-プログラムそのものに不具合（バグ）があり実行を継続できなくなる場合のほか、想定外の異常なデータの入力、処理に必要なメモリ容量の不足、
-限度を超えた高負荷など様々な理由により生じる。通常、アプリケーションソフトがクラッシュすると編集中のデータなどは失われて突然終了し、
-制御はOSに戻る。終了せずに停止状態に陥ることは「フリーズ」（凍る）「ストール」（固まる）などという。
-
-異常な高負荷やハードウェア異常、ソフトウェアの脆弱性を利用した外部からの攻撃などによりOS自体がクラッシュする場合もある。
-自動的に再起動される場合もあるが、機能停止状態となり管理者がリセットボタンで強制的に再起動させるなどの措置が必要となる場合もある。
-```
-
----
-
 ## コンパイルとビルドの違い
 
 <https://twitter.com/itengr_matome/status/1488270286302507009>  
@@ -189,29 +117,6 @@ ITの分野では、俗にストレージ（外部記憶装置）が物理的に
 >インタプリタ言語なら実行時にコンパイルしてたりする。  
 >Buildは製品としてデプロイ可能な状態にすること（コンパイル、テスト、パッケージング等）  
 >と習ったかなぁ・・・  
-
----
-
-## Abstract,Interface
-
-まぁ何かサンプルを作るのが手っ取り早いな。
-
-Javaの本は長々と説明があるので読むのがだるい。
-それにサンプルとしてまとめるにはいささか冗長すぎる。
-
-abstractとinterface使い分けのベストプラクティスさえわかれば個人的にはいい。
-
-``` txt
-abstract           | interface
-
-処理を記述できる。   定義だけ。
-```
-
-https://suin.io/522
-https://teratail.com/questions/70213
-https://qiita.com/yutorisan/items/d28386f168f2f3ab166d
-
-interfaceはcan doの関係  
 
 ---
 
@@ -277,10 +182,12 @@ var num = 10;
 
 [関数リテラルという言葉を理解する](https://amimimi.hatenablog.com/entry/2013/11/16/174019)  
 
+無名関数のことを関数リテラルとも言う。  
 変数に関数を代入して記述することを関数リテラルという。  
-関数リテラル、無名関数、匿名関数、3つはほぼ同義。  
+関数リテラル、無名関数、匿名関数の3つはほぼ同義。  
 
 ``` js
+// function() {} が無名関数であり、関数リテラルに当たる部分
 var test = function() {}
 ```
 
@@ -312,6 +219,14 @@ var test = function() {}
 
 ---
 
+## デグレード：degrade
+
+[デグレとは　種類や原因と共に、対策の考え方を解説](https://service.shiftinc.jp/column/4923/#:~:text=%E3%83%87%E3%82%B0%E3%83%AC%E3%81%A8%E3%81%AF%E3%80%81%E6%AD%A3%E7%A2%BA%E3%81%AB,%E3%81%AE%E3%81%93%E3%81%A8%E3%82%92%E3%81%84%E3%81%84%E3%81%BE%E3%81%99%E3%80%82)  
+
+正確にいえば英語の「degrade」(低下する、下がる)の略語で、IT業界で使われる場合は、ソフトウェア開発のなかで、不具合を修正した場合などにそれまで動作したものが動かなくなってしまうというように、品質が低下してしまうトラブルのことをいいます。  
+
+---
+
 ## POCO(Plain Old CLR Object)
 
 メソッドを持たず、プロパティだけ持つ、データを格納するだけが目的のクラス。  
@@ -321,41 +236,65 @@ var test = function() {}
 
 ---
 
-## 命名規則
+## エラーに関して
 
-[命名規則(キャメルケース, パスカルケース, スネークケース, ケバブケース)](https://www.wakuwakubank.com/posts/804-it-naming-convention/)  
+- 業務エラーは例外としてスローし、上位で適切な処置を行う必要があります。  
+- 業務エラーを例外で表すことにより、可読性・保守性の向上に繋がります。  
+- 業務エラーを例外で表しても、適切な設計を行えばパフォーマンスに問題はありません。  
+- 業務エラーを表す例外に対して適切な処理を行っている限り、型以外の例外情報は不要です。  
+- 業務エラーを表す例外がハンドルされなかった場合、例外情報がとても重宝します。  
+- 業務エラーを表す例外はException クラスから派生させます。  
 
-### キャメルケース( camelCase ) or ローワーキャメルケース
+業務エラーはExceptionクラスを派生して業務エラー用のクラスを作ってそれを検知するというのが正しい例外処理のようだ。  
+それならば本来の例外と業務エラーをごっちゃにしてExceptionだけで取得する必要がなくなる。  
+業務エラーなら派生クラスで再定義、本来のエラーはexceptionで取得。  
+業務エラーをフォームに組み込むならば、親クラスで定義してもらわないと無理だな。  
 
-`currentUserItem`  
+---
 
-- 先頭の要素語( current )は小文字で書き始めます。  
-- 先頭以外の要素語( user item )の最初を大文字で書き始めます。  
-- ローワーキャメルケースともいいます。  
+## ストリーム
 
-- PHPやjsなどの関数で使われることが多い  
+[ストリームとは | IT用語辞典 e-Words](https://e-words.jp/w/%E3%82%B9%E3%83%88%E3%83%AA%E3%83%BC%E3%83%A0.html)  
 
-### パスカルケース( PascalCase ) or アッパーキャメルケース
+>ストリームとは、小川、流れ、連続などの意味を持つ英単語で、ITの分野では連続したデータの流れや、データの送受信や処理を連続的に行うことなどを意味する。  
+>プログラミングの分野では、データの入出力全般を扱う抽象的なオブジェクトやデータ型を意味する場合が多い。  
+>データが出入りする何らかの対象（メモリ領域やファイル、ネットワークなど）をプログラム中で扱えるように抽象化したもので、接続や切断、書き込みや読み込みなどを簡易な操作で行うことができる。  
 
-`CurrentUserItem`  
+[ストリーム | Programming Place Plus　用語集](https://programming-place.net/ppp/contents/glossary/sa/stream.html)  
 
-- 要素語( current user item )の最初を大文字で書き始めます。  
-- アッパーキャメルケースともいいます。
+>プログラミングにおいて、連続するデータの入出力を行うための抽象的なオブジェクトのことです。  
+>「ストリーム（stream）」とは「流れ」のことであり、データを入出力する様子を、データが流れているように見立てたものです。  
+>入力であればデータの入力元となる存在（キーボードやファイル、ネットワークなど）、出力であればデータの出力先となる存在（ディスプレイやファイル、ネットワークなど）をプログラム中で区別なく扱えるように抽象化したオブジェクトのことです。  
+>データの入力時には入力用のストリーム（入力ストリーム）を通し、データの出力時には出力用のストリーム（出力ストリーム）を通します。  
 
-### スネークケース( snake_case )
+---
 
-`current_user_item`  
+## abstractとinterfaceの棲み分け
 
-- アンダースコア で要素語( current user item )を連結します。  
+interfaceは外部向け。abstractは内部向け。  
+interfaceはpublicしか記述できない。  
+abstractはprotectedが使える。  
+なので、外部に公開する場合はinterface。  
+内部において、実装を強制する場合はabstractを用いるいいかも。  
 
-- 定数はすべて大文字。例:BLOG_CATEGORY  
-- DBなどで扱われる値に使用されることが多い  
+---
 
-### ケバブケース( kebab-case )
+## セマフォ
 
-`company-id`,`blog-catefgory`  
+<https://e-words.jp/w/%E3%82%BB%E3%83%9E%E3%83%95%E3%82%A9.html#:~:text=%E3%82%BB%E3%83%9E%E3%83%95%E3%82%A9%E3%81%A8%E3%81%AF%E3%80%81%E3%82%B3%E3%83%B3%E3%83%94%E3%83%A5%E3%83%BC%E3%82%BF%E3%81%A7,%E3%82%92%E8%A1%A8%E3%81%99%E5%80%A4%E3%81%AE%E3%81%93%E3%81%A8%E3%80%82>
 
-- ハイフン で要素語( current user item )を連結します。
+``` txt
+セマフォとは、コンピュータで並列処理を行う際、同時に実行されているプログラム間で資源（リソース）の排他制御や同期を行う仕組みの一つ。
+当該資源のうち現在利用可能な数を表す値のこと。
+```
 
-- HTMLのclass名  
-- ファイル名等  
+セマフォを資源を使っているかどうか、その状態を表す信号機のようなものだと認識していたが、  
+本来は並列処理がメインの概念みたいだ。  
+
+萬君からセマフォって何？って聞かれたのと、「セマフォがタイムアウトしました。」ってエラーを見せられたので、調べてみた次第です。  
+ドンピシャな回答があったので乗せておく。  
+「tcp プロバイダー セマフォがタイムアウトしました。」  
+<https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q14134357014>  
+
+要約すると、A、B、Cってプロセスが並行してて、  
+ある資源が全然解放されないって時にセマフォがタイムアウトエラーを発生させるってことらしい。  
