色々吸い上げた

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -289,6 +289,226 @@ WebAssemblyを使えば、多様なアプリをWebアプリとして動かせる
 
 ---
 
+## Json
+
+Jsonの構成、要素の名前
+
+[JSONについて調べてみた](https://qiita.com/chihiro/items/dd1912c1406dbfe16b72)  
+
+キー・バリュー
+変数名と値
+
+---
+
+## TL;DR (TLDR)
+
+[シマウマ用語集](https://makitani.net/shimauma/tldr#:~:text=TL%3BDR%E3%82%82%E3%81%97%E3%81%8F%E3%81%AFTLDR%E3%81%A8,%E7%95%A5%E8%AA%9E%E3%80%81%E3%82%A4%E3%83%B3%E3%82%BF%E3%83%BC%E3%83%8D%E3%83%83%E3%83%88%E3%82%B9%E3%83%A9%E3%83%B3%E3%82%B0%E3%81%AE%E3%81%93%E3%81%A8%E3%80%82)  
+
+TL;DRもしくはTLDRとは、「Too Long, Didn’t Read」の略で、「文章が長すぎて、読んでいません」という意味の英語の略語、インターネットスラングのこと。  
+文章が長くて文句を言ったり「長文ウザい」と小馬鹿にしたりといった、ネガティブで非難するニュアンスを含むケースが多い。  
+自らの冗長な文章への自虐的な弁明の場合もある。  
+
+エンジニア界隈では、そこから転じて「（長すぎて読めない人のための）要約」の意味でも用いられる。  
+「;（セミコロン）」は接続詞省略で、「だから」の意味を表す。  
+「tl;dr」など小文字表記も見られる。  
+
+---
+
+## 色
+
+[【VB.NET】【WPF】Extended WPF Toolkit ColorPicker の使い方](https://elleneast.com/?p=12894#ColorPicker_xaml)  
+
+``` C#
+using RN3.Wpf.Common.Resource;
+using System;
+using System.Globalization;
+using System.Windows.Data;
+
+namespace RN3.Wpf.Common.Converter
+{
+    /// <summary>
+    /// 色コンバータ
+    /// </summary>
+    public class BrushConverter : IValueConverter
+    {
+        /// <summary>
+        /// デフォルトカラー
+        /// </summary>
+        public System.Drawing.Color DefaultColor { get; set; }
+
+        /// <summary>
+        /// IntからColorに変換する
+        /// </summary>
+        /// <param name="value"></param>
+        /// <param name="targetType"></param>
+        /// <param name="parameter"></param>
+        /// <param name="culture"></param>
+        /// <returns></returns>
+        public object Convert(object value, Type targetType, object parameter, CultureInfo culture)
+        {
+            if (value == null)
+            {
+                if (DefaultColor != null)
+                {
+                    var dc = DefaultColor;
+                    return new System.Windows.Media.SolidColorBrush(System.Windows.Media.Color.FromArgb(dc.A, dc.R, dc.G, dc.B));
+                }
+                return null;
+            }
+            if (!(value is int)) throw new Exception(string.Format(Message.Invalid, "型"));
+            //IntからRGBに変換
+            var c = System.Drawing.Color.FromArgb((int)value);
+
+            return new System.Windows.Media.SolidColorBrush(System.Windows.Media.Color.FromRgb(c.R, c.G, c.B));
+        }
+
+        /// <summary>
+        /// ColorからIntに変換する
+        /// </summary>
+        /// <param name="value"></param>
+        /// <param name="targetType"></param>
+        /// <param name="parameter"></param>
+        /// <param name="culture"></param>
+        /// <returns></returns>
+        public object ConvertBack(object value, Type targetType, object parameter, CultureInfo culture)
+        {
+            if (value == null)
+            {
+                return null;
+            }
+            if (!(value is System.Windows.Media.SolidColorBrush)) throw new Exception(string.Format(Message.Invalid, "型"));
+
+            var valueColor = ((System.Windows.Media.SolidColorBrush)value).Color;
+            var c = System.Drawing.Color.FromArgb(valueColor.R, valueColor.G, valueColor.B);
+            return c.ToArgb();
+        }
+    }
+}
+```
+
+``` XML
+<Window
+    x:Class="Color.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Color"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
+    <Grid>
+        <xctk:ColorPicker
+            Width="126"
+            Height="29"
+            Margin="455,94,211,296" />
+        <TextBox
+            Name="_Input"
+            Width="126"
+            Height="29"
+            Margin="96,119,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Text="TextBox"
+            TextWrapping="Wrap" />
+        <TextBox
+            Name="_Output"
+            Width="126"
+            Height="29"
+            Margin="96,172,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Text="TextBox"
+            TextWrapping="Wrap" />
+        <Button
+            Name="_Execute"
+            Width="126"
+            Height="32"
+            Margin="96,254,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Click="_Execute_Click"
+            Content="Button" />
+        <Border
+            Name="_Border"
+            Width="88"
+            Height="73"
+            Margin="334,148,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            BorderBrush="Black"
+            BorderThickness="1" />
+    </Grid>
+</Window>
+```
+
+``` C#
+    /// <summary>
+    /// MainWindow.xaml の相互作用ロジック
+    /// </summary>
+    public partial class MainWindow : Window
+    {
+        public MainWindow()
+        {
+            InitializeComponent();
+        }
+
+
+        private void _Execute_Click(object sender, RoutedEventArgs e)
+        {
+
+            {
+                var aaa = new SolidColorBrush(System.Windows.Media.Color.FromRgb(0, 255, 255));
+                //if (value == null)
+                //{
+                //    return null;
+                //}
+                //if (!(value is System.Windows.Media.SolidColorBrush)) throw new Exception(string.Format(Message.Invalid, "型"));
+
+                var valueColor = aaa.Color;
+                var c2 = System.Drawing.Color.FromArgb(valueColor.R, valueColor.G, valueColor.B);
+                _ =  c2.ToArgb();
+            }
+
+            var value = _Input.Text;
+
+            //if (value == null)
+            //{
+            //    if (DefaultColor != null)
+            //    {
+            //        var dc = DefaultColor;
+            //        return new System.Windows.Media.SolidColorBrush(System.Windows.Media.Color.FromArgb(dc.A, dc.R, dc.G, dc.B));
+            //    }
+            //    return null;
+            //}
+            if (!int.TryParse(value, out int aaaa))
+            {
+                //throw new Exception("型");
+                MessageBox.Show("かた");
+                return;
+            }
+            //IntからRGBに変換
+            var c = System.Drawing.Color.FromArgb(aaaa);
+
+
+            var brush = new SolidColorBrush(System.Windows.Media.Color.FromRgb(c.R, c.G, c.B));
+            _Border.Background = brush;
+        }
+    }
+```
+
+---
+
+Redis
+
+C10k問題
+
+
+
+---
+
 ## 雑記
 
 トーレス・デル・パイネ国立公園
@@ -337,4 +557,35 @@ Issueってなんすかね。
 
 [イベントログの確認と保存](https://news.mynavi.jp/techplus/article/techp923/)  
 
+[C#でDIコンテナを使用してみる](https://remix-yh.net/1332/)
+
 ・ASP.Net Core API + Vue axios 通信サンプル
+
+
+思えば、席の入れ替えやってもらった身なんだよなぁ。
+→よし。居林さんには感謝を伝えられたぞ。
+
+最近の自分の振る舞いが駄目。
+平気で唾を吐くようになってるし、横暴な態度で後輩に接するのがよしとなってる気がする。
+
+
+靴、ドライEXポロシャツ
+
+
+色を変換する一連のやつツール
+なんかつくりたいよねぇ。
+
+
+今日もよく寝た。
+朝から出るものが出たのが以外だった。
+おかげで体調はいいが、昼頃にはもう帰りたくなってた。
+なんか頭の中にごみがある。
+モヤモヤしてる。
+
+
+デスクマット売れた。
+なーーんかたいしてうれしくない。
+
+・実務でのjson読み込み
+
+仕事より知りたいことのほうが多すぎる。
