--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -293,9 +293,74 @@ WebAssemblyを使えば、多様なアプリをWebアプリとして動かせる
 
 ## Redis
 
+>wiki  
+>Redisは、ネットワーク接続された永続化可能なインメモリデータベース。  
+>連想配列（キー・バリュー）、リスト、セットなどのデータ構造を扱える。  
+>いわゆるNoSQLデータベースの一つ。  
+>オープンソースソフトウェアプロジェクトであり、Redis Labs（英語版）がスポンサーとなって開発されている。  
+
 ---
 
 ## C10k問題
+
+>Wiki  
+>C10K問題（英語: C10K problem）とは、Apache HTTP ServerなどのWebサーバソフトウェアとクライアントの通信において、クライアントが約1万台に達すると、Webサーバーのハードウェア性能に余裕があるにも関わらず、レスポンス性能が大きく下がる問題である。  
+
+### 由来と読み方
+
+C(クライアント)10K(1万)問題  
+「シーテンケー・モンダイ」と読みます。  
+
+---
+
+## Prism Template Pack
+
+[Prism Template Packを使わないでXamarin.FormsソリューションにPrismを適用する](https://qiita.com/ats-y/items/f76098612786b3e9cf4a)  
+
+Visual Studio 2019 でPrism Template Pack がインストールできなくなった。  
+サポートが終了した模様。  
+Visual Studio 2022出ないとインストールできない。  
+マニュアルにある通りは出来なくなった。  
+
+Prism Template Pack で作ったプロジェクトを見ながら、手動で必要なコンポーネントをインポートして同じような形にして起動までできたので、Prism Template Packがなくても開発はできそうなことを確認した。  
+
+Prism Template Packで作成したデフォルトの状態がこれ。  
+なので、安直に手で必要なパッケージをインストールして、再現することが可能。  
+あれこれ書き換えるけどね。  
+
+---
+
+## 表の名称
+
+パターン表
+デシジョンテーブル
+直交表
+
+``` txt
+予約        プレーヤー
+キャンセル  全員キャンセル → これが普通
+キャンセル  一部キャンセル → ありえない
+予約        全員キャンセル → あり得る
+予約        一部キャンセル → あり得る
+予約        キャンセルなし → 普通
+```
+
+ベン図×
+真理値表×
+
+---
+
+## asp.net パイプライン
+
+プロセス間通信
+x86Extension
+
+---
+
+## TOP 句 PERCENT
+
+[SqlServerの SELECT TOP 100 PERCENT で作成したビューの並び順は『保証されない』](https://culage.hatenablog.com/entry/20170824/p1)  
+[TOP 句 PERCENT](https://haradago.hatenadiary.org/entry/20180214/p1)  
 
 ---
 
@@ -351,3 +416,13 @@ Issueってなんすかね。
 
 ・ASP.Net Core API + Vue axios 通信サンプル
 
+
+
+朝から気分が最悪だ。
+まさか夢でここまで分からされるとは。
+俺の欠点だよな。
+欠点を仕事にするとマジで死ぬことが分かった。
+世の中の大半の人間はこれに苦しんでいるのだろう。
+それに比べたら、俺の状況は超いいほうなのだろう。
+
+好きを仕事になんてくせぇーことはいわねぇが、仕事にするなら出来る事を仕事にしろとはよく言ったものだなと思った。
